Fixes alignment of admin sidebar icons and text

--- a/Themes/Adminlte/resources/assets/less/asgard.less
+++ b/Themes/Adminlte/resources/assets/less/asgard.less
@@ -6,6 +6,10 @@
 
 @import "skins/blue.less";
 
+.sidebar-menu .menu-icon {
+  margin-right: 5px;
+}
+
 // For the appended elements
 .sidebar-menu .append {
   margin-top: -44px;
